<resources>
    <string name="app_name">UMTE_Projekt1</string>
    <string name="SecondLevelText">Princezna se ztratila. Vůbec nevím, kde ji hledat. Jediná stopa, kterou mám je tato hádanka: \"Na provázku přivázaný, letí s větrem o závod, mezi mraky propletený přiletím i napřesrok! Kdo jsem?\" Pomož mi ji najít! A jako odměnu dostaneš polovinu princezny a celé království k tomu!</string>
    <string name="FirstLevelText">Samotný král tě pozval na hrad. Účel toho pozvání netušíš, ale dostat se na hrad je tvůj celoživotní sen. Cesta je však dlouhá a vyčerpávající. Dojdi tedy na hrad a až tam budeš povrď svou polohu.</string>
    <string name="ThirdLevelText">Po zjištění, že princeznu unesl drak jsi věděl, že sám draka nezneškodníš. Vyhledej tedy kouzelníka a vyžádej si od něj tajný kód \"QR\", který ti odhalí tajné zaklínadlo, kterým draka zneškodníš</string>
    <string name="btnFirstLevel">Ověřit lokaci</string>
    <string name="MainActivityTitle">Hra pro děti</string>
    <string name="FirstLevelActivityTitle">První úroveň</string>
    <string name="SecondLevelActivityTitle">Druhá Úroveň</string>
    <string name="ThirdLevelActivityTitle">Třetí úroveň</string>
    <string name="FourthLevelActivityTitle">Čtvrtá úroveň</string>
    <string name="FourthLevelText">Po zjištění tajného obsahu kódu QR jsi zjistil, že největší drakova slabina je Magnet. Vyhledej tedy magnet a zažeň pomocí něj draka!</string>
    <string name="levelLinkDescription1">First Level link</string>
    <string name="levelLinkDescription2">Second Level link</string>
    <string name="levelLinkDescription3">Third Level link</string>
    <string name="levelLinkDescription4">Fourth Level link</string>
    <string name="levelDescription1">First Level image (castle)</string>
    <string name="levelDescription2">Second Level image (king)</string>
    <string name="levelDescription3">Third Level image (wizard)</string>
    <string name="levelDescription4">Fourth Level image (dragon)</string>
    <string name="btnTextLevel2">Odeslat odpověď</string>
    <string name="btnGameCompleted">Resetovat hru</string>
    <string name="textGameCompleted">Po porážce draka jsi se už moc těšil na svou zaslouženou odměnu. Chystal ses ale králi navrhnout, že namísto původní odměny by jsi raději jenom polovinu království ale celou princeznu. Nakonec se ukázalo, že takhle to naštěstí král vždy myslel. Pouze se přeřekl. KONEC.</string>
    <string name="txtHeadlineGameCompleted">GRATULACE!!</string>
    <string name="GameCompletedActivityTitle">Výhra!</string>
    <string name="btnGameCompletedText">SCAN</string>
</resources>