<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdLevelActivity">

    <ImageView
        android:id="@+id/imgLevel3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/level3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/levelDescription3"/>

    <TextView
        android:id="@+id/textLevel4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/ThirdLevelText"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGameCompleted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLevel3" />

    <Button
        android:id="@+id/btnGameCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGameCompletedText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLevel3"
        android:onClick="launchQrActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>