<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/centerVerticalShim"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <View
        android:id="@+id/centerHorizontalShim"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imgPreviewLevel1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_above="@+id/centerVerticalShim"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/centerHorizontalShim"
        android:gravity="center"
        android:onClick="launchLevel1"
        android:src="@drawable/level1"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/levelLinkDescription1" />

    <ImageView
        android:id="@+id/imgPreviewLevel2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_above="@+id/centerVerticalShim"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/centerHorizontalShim"
        android:gravity="center"
        android:src="@drawable/blur2"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/levelLinkDescription2"/>

    <ImageView
        android:id="@+id/imgPreviewLevel3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_below="@+id/centerVerticalShim"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/centerHorizontalShim"
        android:gravity="center"
        android:src="@drawable/blur3"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/levelLinkDescription3"/>

    <ImageView
        android:id="@+id/imgPreviewLevel4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_below="@+id/centerVerticalShim"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/centerHorizontalShim"
        android:src="@drawable/blur4"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/levelLinkDescription4"/>

</RelativeLayout>
