<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondLevelActivity">

    <ImageView
        android:id="@+id/imgLevel2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/level2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/levelDescription2"/>

    <EditText
        android:id="@+id/editTxtRiddleAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLevel2"
        app:layout_constraintVertical_bias="0.527"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/SecondLevelText"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/editTxtRiddleAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLevel2" />

    <Button
        android:id="@+id/btnGameCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTextLevel2"
        android:onClick="checkRiddleAnswer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtRiddleAnswer" />

</androidx.constraintlayout.widget.ConstraintLayout>